# 1Electronics_store

./: README.dm  items.py  pyproject.toml
tests/: conftest.py  test_items.py
